--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,5 +24,5 @@
 }
 
 .banner {
-  background-image: url("C:\Personal\Projects\SecretAgentSupply\resources\images\moto.jpg");
+  background-image: url("../resources/images/moto.jpg");
 }
