--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,7 @@
-/* header */
-
-/* body {
-  font-family: arial;
-} */
+.siteContainer {
+  max-width: 960px;
+  margin: 0 auto;
+}
 
 .head {
   display: flex;
@@ -13,16 +12,97 @@
 }
 
 .head img {
-  width: 43px;
-  height: 30px;
-  margin: 30px 30px 30px 140px;
+  height: 1.5rem;;
+  padding: 0 1rem 0 0.5rem;
+  /* margin-left: 10rem; */
 }
 
 .head span {
   color: white;
-  font-family: arial;
+  font-size: 1rem;
+  font-family: helvetica;
+  padding-top: 0.66rem;
+  padding-bottom: 0.66rem;
 }
 
 .banner {
-  background-image: url("../resources/images/moto.jpg");
+  background-image: url("..//images/moto.jpg");
+  height: 25rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  align-items: center;
+}
+
+.bannerBox {
+  color: white;
+  width: 20rem;
+  background-color: black;
+  position: relative;
+  top: 9rem;
+  padding: 2rem 3rem;
+}
+
+/* .bannerBox h4,h1 {
+ z-index: 1;
+ padding-left: 3rem;
+} */
+
+/* .bannerBox h4 {
+  font-family: helvetica;
+  font-weight: bold;
+  font-size: 1rem;
+  font-weight: bold;
+} */
+
+.bannerBox h1 {
+ font-family: helvetica;
+ font-size: 2rem;
+ font-weight: bold;
+ margin: 0 .25 0;
+}
+
+.nav {
+  background-color: firebrick;
+  color: white;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem 0.75rem;
+  list-style: none;
+}
+
+/* Image Boxes */
+
+.imageBoxContainer {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.imageBox {
+  display: flex;
+  flex-direction: column;
+  max-height: 9rem;
+  width: 30%;
+  border: 4px solid black;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+}
+
+.productImage img {
+  max-width: 8rem;
+  margin-top: 2rem;
+}
+
+.imageBoxText {
+  align-content: flex-end;
+  background-color: black;
+  color: white;
+  padding: 0.5rem;
+  /* width: 100%; */
 }
